--- a/package.json
+++ b/package.json
@@ -37,13 +37,11 @@
     "cheerio": "^0.19.0",
     "cookie-parser": "~1.4.0",
     "css": "~2.2.0",
-    "cssnext": "^1.8.4",
     "express": "~4.13.0",
     "fs-extra": "^0.26.2",
     "gonzales-pe": "4.0.3",
     "gulp": "~3.9.0",
     "gulp-concat": "~2.6.0",
-    "gulp-cssnext": "^1.0.1",
     "gulp-mustache": "~2.0.1",
     "gulp-postcss": "^6.1.0",
     "gulp-rename": "^1.2.2",
@@ -58,15 +56,17 @@
     "node-localcache": "^0.1.3",
     "postcss": "^5.0.14",
     "postcss-advanced-variables": "^1.2.2",
+    "postcss-browser-reporter": "^0.5.0",
     "postcss-color-alpha": "^1.0.3",
     "postcss-color-function": "^2.0.0",
     "postcss-conditionals": "^2.0.1",
+    "postcss-cssnext": "^2.10.0",
     "postcss-custom-media": "^5.0.1",
-    "postcss-import": "^8.0.2",
     "postcss-inline-comment": "^2.0.0",
     "postcss-mixins": "^4.0.0",
     "postcss-nested": "^1.0.0",
     "postcss-partial-import": "^1.3.0",
+    "postcss-reporter": "^3.0.0",
     "pug": "^2.0.0-beta6",
     "q": "~1.4.1",
     "run-sequence": "~1.1.0",
@@ -125,6 +125,6 @@
     "prepublish": "gulp build",
     "build": "gulp build",
     "demo": "gulp --gulpfile ./demo-gulpfile.js watch",
-    "depcheck": "dependency-check . --unused --no-dev --entry gulpfile.js --entry demo-gulpfile.js --entry lib/styleguide.js"
+    "depcheck": "dependency-check . --unused --no-dev --entry demo-gulpfile.js --entry lib/styleguide.js"
   }
 }
